<resources>
    <string name="app_name">Rahmet Business</string>
    <string name="welcome_text_phone">Номер Вашего телефона будет
использоваться для авторизации</string>
    <string name="caption_sign_up">Вы зарегистрированы?</string>
    <string name="welcome_description">Почему Вам нужен Рахмет</string>
    <string name="welcome_text">Добро пожаловать!</string>
    <string name="log_in_btn">Войти</string>
    <string name="sign_up_btm">Зарегистрироваться</string>
    <string name="hint">Подсказка</string>

</resources>
