<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/cardview_dark_background"
    android:gravity="center"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/icon"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="4"
        android:adjustViewBounds="true"
        android:baselineAlignBottom="true"
        android:cropToPadding="true"
        android:padding="15dp"
        android:src="@drawable/ic_group_rahmet" />


    <LinearLayout
        android:id="@+id/clBottom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/shape_with_top_rounded"
        android:orientation="vertical"
        android:paddingLeft="58dp"
        android:paddingTop="20dp"
        android:paddingRight="58dp">

        <TextView
            android:id="@+id/tvWelcome"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/welcome_text"
            android:textColor="@color/cardview_dark_background"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/tvPhoneInformation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/welcome_text_phone"
            android:textAlignment="center"
            android:textColor="#878787"
            android:textSize="14sp" />

        <EditText
            android:id="@+id/signup_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:textAlignment="center"
            android:hint="ПАРОЛЬ"
            android:textColor="#474747"
            android:textSize="18sp" />

        <Button
            android:id="@+id/log_in_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:background="@drawable/shape_button_black"
            android:text="@string/log_in_btn"
            android:textAllCaps="false"
            android:textColor="#FFFFFF"
            android:textSize="16sp" />

        <Button
            android:id="@+id/sign_up_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/shape_button"
            android:text="@string/sign_up_btm"
            android:textAllCaps="false"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/lending_link"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/welcome_description"
            android:textAlignment="center"
            android:textColor="#DE000000"
            android:textSize="14sp" />


    </LinearLayout>

</LinearLayout>