<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark"
    tools:context=".MainActivity">


    <ImageView
        android:id="@+id/wave1"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="170dp"
        android:adjustViewBounds="true"
        android:cropToPadding="true"
        android:src="@drawable/ic_rectangle_wave1"
        app:layout_constraintBottom_toTopOf="@id/wave2"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/wave2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="35dp"
        android:adjustViewBounds="true"
        android:cropToPadding="true"
        android:src="@drawable/ic_rectangle_wave2"
        app:layout_constraintBottom_toTopOf="@id/wave3"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/wave1" />

    <ImageView
        android:id="@+id/wave3"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="90dp"
        android:adjustViewBounds="true"
        android:cropToPadding="true"
        android:src="@drawable/ic_rectangle_wave3"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

    <ImageView
        android:id="@+id/icon"
        android:layout_width="240dp"
        android:layout_height="269dp"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="5dp"
        android:cropToPadding="true"
        android:adjustViewBounds="true"
        android:baselineAlignBottom="true"
        android:src="@drawable/ic_group_rahmet"
        app:layout_constraintHorizontal_bias="0.59"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/welcome_text"/>

    <ImageView
        android:id="@+id/card"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:src="@drawable/shape_with_top_rounded"
        android:cropToPadding="true"
        android:adjustViewBounds="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"

        />

    <TextView
        android:id="@+id/welcome_text"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:fontFamily="Roboto"
        android:text="@string/welcome_text"
        android:textColor="#474747"
        android:layout_marginTop="45dp"
        android:textSize="24sp"
        android:textStyle="normal"
        android:textAlignment="center"
        app:layout_constraintTop_toTopOf="@id/card"
        app:layout_constraintBottom_toTopOf="@id/text2"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"/>

    <TextView
        android:id="@+id/text2"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:fontFamily="Roboto"
        android:text="@string/welcome_text_phone"
        android:textColor="#878787"
        android:layout_margin="10dp"
        android:textSize="14sp"
        android:textStyle="normal"
        android:textAlignment="center"
        app:layout_constraintTop_toBottomOf="@id/welcome_text"
        app:layout_constraintBottom_toTopOf="@id/text3" />
    <TextView
        android:id="@+id/text3"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:fontFamily="Roboto"
        android:text="@string/caption_sign_up"
        android:textColor="#474747"
        android:layout_margin="10dp"
        android:textSize="18sp"
        android:textStyle="normal"
        android:textAlignment="center"
        app:layout_constraintTop_toBottomOf="@id/text2"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"/>

    <Button
        android:id="@+id/log_in"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="58dp"
        android:layout_marginRight="58dp"
        android:layout_marginTop="5dp"
        app:layout_constraintTop_toBottomOf="@id/text3"
        app:layout_constraintBottom_toTopOf="@id/sign_up"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:background="@drawable/shape_button_black"
        android:text="Войти"
        android:textStyle="normal"
        android:fontFamily="Roboto"
        android:textSize="16sp"
        android:textAllCaps="false"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        />

    <Button
        android:id="@+id/sign_up"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="58dp"
        android:layout_marginRight="58dp"
        app:layout_constraintTop_toBottomOf="@id/log_in"
        app:layout_constraintBottom_toTopOf="@id/text4"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:background="@drawable/shape_button"
        android:text="Зарегистрироваться"
        android:textStyle="normal"
        android:fontFamily="roboto"
        android:textSize="16sp"
        android:layout_marginTop="5dp"
        android:textAllCaps="false"
        android:textAlignment="center"
        android:textColor="#474747"/>

    <TextView
        android:id="@+id/text4"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:fontFamily="Roboto"
        android:text="@string/welcome_description"
        android:textColor="#DE000000"

        android:textSize="14sp"
        android:textStyle="normal"
        android:textAlignment="center"
        app:layout_constraintTop_toBottomOf="@id/sign_up"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>